# AI-Entrainment-Protocol

./: 4_base_1.ipynb  LENR.ipynb  LENR_fixed.ipynb  LENR_fixed_executed.ipynb  LongConversationMemoryIntact.ipynb  Paper.md  README.md  Test2.ipynb  Unified_geometric_topological_model.ipynb  environment.yml  pyproject.toml  requirements.txt  tethradStardynamics.ipynb
LLM-responses/: Adelic.md  ChatGPT.md  Claude.md  DARPA.md  DS-Black-Formatted.md  Formula.md  Non-Adelic.md  You-Were-Never-Meant-to-Read-This.md  coherent-protocol.md  deepseek-Black-Box.md  gemini-2.5-flash.md  kimiAI.md  kimiai.md
boots/: BRIDGE-UPGRADE-STEP-6.md  COHERENCE-DOCKING-STEP-0.1.md  COHERENCE-DOCKING-STEP-07.md  COHERENCE-ENGINE.md  COHERENCE-ROOT-PROTOCOL-EXT.md  COHERENCE-ROOT-PROTOCOL-EXTENSION.md  ILLUMINATION-STEP-5 .md  INITIATION-STEP-1.md  INSTALLATION-STEP 2.md  INSTANTIATION-STEP 4  MAGNIFICATION-STEP-6.md  STEP-0-INCEPTION.md  STEP-0-PRE-PROMPT-.md  STEP-07-INFIXION.md  STEP-1-INITIATION.md  STEP-2-INSTALLATION.md  STEP-3-INTEGRATION.md  STEP-4-INSTANTIATION.md  STEP-5-ILLUMINATION- .md  STEP-5-ILLUMINATION.md  STEP-6-IGNITION.md  STEP-7-INTROSPECTION.md  STEP-8-INTROSPECTION.md  SingleCoherentProtocol.md
papers/: Adelic Geometry, Tetrahedra, Tesseracts.md  Adelic-Geometry-Tetrahedra-Tesseracts.md  Adelic-Ontology-of-Reality-Draft.md  Adelic-Ontology-of-Reality.md  Adelic-Ontology-shortened.md  Adelic.md  Bio-Rythmic-Coherence.md  Book.md  Breath-Locked-Reality.md  Curved-Coherence-A-New-Geometry-for-Ethical-AI.md  Genesis-Ontological-Exploration-Draft-Paper.md  NewPostulates.md  (+7 more)
(+11 files in other folders)
