[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-entrainment-protocol"
version = "0.0.0"
description = "Reproducible Python environment for the LENR notebook"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "networkx>=2.8",
  "matplotlib>=3.7",
  "mpmath>=1.3",
  "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
  "ipykernel",
]

